# Forge

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  add_arrays.air  add_arrays.metal  add_arrays.metallib  custom_metal.py  decorator.py  forge.py  loadMetal.py  main.py  ruff.toml  setup.py  transpiler.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
benchmarks/: compare_frameworks.py  matmul_benchmark.py  trace_benchmark.py
cpp/include/: array_add.h  array_binops.h  array_handle.h  bindings.h  forge_handle.h  frontend.h  graph_handle.h  metal_source.h  metal_utils.h  runtime.h
cpp/src/: array_add.cpp  array_add.mm  array_binops.mm  array_handle.cpp  array_handle.mm  bindings.cpp  bindings_impl.cpp  compiler.cpp  forge_handle.mm  frontend.cpp  graph_handle.mm  metal_utils.mm  runtime.cpp
denoiser/: main.py
docs/developer/: doc.md
docs/user/: doc.md
metal/: elementwise.metal
metal_samples/: kernel.metal  matmult_kernel.air  matmult_kernel.metal  matmult_kernel.metallib  metal_matmult_setup.metal  metal_sum_setup.metal  sum_kernel.air  sum_kernel.metal  sum_kernel.metallib
py/Forge/: __init__.py  array.py  forge.py  graph.py  ops.py  shape.py  symbolic.py  tracer.py  utils.py
py/examples/: main.py
py/examples/denoiser/: main.py
tests/: test_array.py  test_indexing.py  test_ops.py  test_shape.py  test_tracer.py  test_view.py
